ci_cd/cf.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  endermiteSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
  endermiteInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: 'ami-00f8e408bb2e9b06e'
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref endermiteSG
      UserData: !Ref UserData
Parameters:
  CreationDate:
    Description: Date
    Type: String
    Default: '2013-03-20 21:15:00'
    AllowedPattern: "^\\d{4}(-\\d{2}){2} (\\d{2}:){2}\\d{2}$"
    ConstraintDescription: Date and time of creation
  UserData:
    Type: String
    Default: 'eyJpZ25pdGlvbiI6eyJjb25maWciOnsicmVwbGFjZSI6eyJzb3VyY2UiOiJodHRwczovL2dpdGh1Yi5jb20vZWlubmFtZWhhbHQvZW5kZXJtaXRlL3JlbGVhc2VzL2xhdGVzdC9kb3dubG9hZC9tYWluLXg4Nl82NC5pZ24ifX0sInZlcnNpb24iOiIzLjMuMCJ9fQ=='
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: 'The IP address range that can be used to SSH to the EC2 instances'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 87.148.66.90/32
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
